[tool.poetry]
name = "rdmolony.github.io"
version = "0.1.0"
description = "My blog"
authors = ["Rowan Molony <rowan.molony@mainstreamrp.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.4.0"
mkdocs-roamlinks-plugin = "^0.2.0"
mkdocs-mermaid2-plugin = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
